--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -87,6 +87,10 @@ $colorSecundario:#EBEBD3;
                 aspect-ratio: 1/1;
                 object-fit: cover;
             }
+            .galeria-foto:hover{
+                transition: 1s;
+                transform: scale(1.3,1.3) translateY(-30px);
+            }
         }
     } 
 }
@@ -339,15 +343,31 @@ section{
     .grid-item{
         .grid-item1{
             grid-area: item1;
+            .grid-item1:hover{
+                transition: transform 1s;
+                transform: scale(1,1) translateY(-30px);
+            }
         }
         .grid-item2{
             grid-area: item2;
+            .grid-item2:hover{
+                transition: transform 1s;
+                transform: scale(1,1) translateY(-30px);
+            }
         }
         .grid-item3{
             grid-area: item3;
+            .grid-item3:hover{
+                transition: transform 1s;
+                transform: scale(1,1) translateY(-30px);
+            }
         }
         .grid-item4{
             grid-area: item4;
+            .grid-item4:hover{
+                transition: transform 1s;
+                transform: scale(1,1) translateY(-30px);
+            }
         }
         .link-grid{
             color: black;
@@ -522,7 +542,7 @@ section{
         "item2" 
         "item3"
         "item4" ;
-        
+
         .grid-image{
             height: 250px;
             width: 200px;
