--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -9,7 +9,7 @@
         display: flex;
         gap: 1rem;
         
-        .footer-icons a{
+        a{
             color: black;
             font-size: 1.5rem;
         }
