--- a/scss/partials/_galerias.scss
+++ b/scss/partials/_galerias.scss
@@ -20,16 +20,16 @@
         .galeria-foto{
             height: 100%;
             width: 100%;
+        }
 
-            .galeria-foto img{
-                width: 100%;
-                aspect-ratio: 1/1;
-                object-fit: cover;
-            }
-            .galeria-foto:hover{
-                transition: 1s;
-                transform: scale(1.3,1.3) translateY(-30px);
-            }
+        .galeria-foto img{
+            width: 100%;
+            aspect-ratio: 1/1;
+            object-fit: cover;
+        }
+        .galeria-foto:hover{
+            transition: 1s;
+            transform: scale(1.3,1.3) translateY(-30px);
         }
     } 
 }
@@ -63,9 +63,22 @@ section{
         margin-inline: auto;
         gap: 1rem;
     }
-    .texto2{
+    .galeria-foto{
+        height: 100%;
+        width: 100%;
+    }
+    .galeria-foto img{
+        width: 100%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+    .galeria-foto:hover{
+        transition: 1s;
+        transform: scale(1.3,1.3) translateY(-30px);
+    }
+    
+    p{
         text-align: left;
-        padding-top: .3rem;
     }
 }
 .pinterest-moda{
